Fix alignments

--- a/modal.css
+++ b/modal.css
@@ -12,21 +12,21 @@ h2.popUp {
 
 .popupContainer {
   position: fixed;
+  display: flex;
   top: 0;
   left: 0;
-  height: 95%;
+  height: 84%;
   width: 100vw;
   z-index: 2;
-  padding-left: 0.9em;
+  padding-left: 0.5em;
   padding-right: 2em;
   background: #fff;
   justify-content: start;
   margin-right: 6%;
-  margin-left: 10%;
+  margin-left: 1%;
   margin-top: 4%;
   border: 1px solid #dfe1e6;
   border-radius: 16px;
-  display: flex;
   flex-direction: column;
   align-items: flex-start;
   overflow-y: auto;
@@ -34,8 +34,8 @@ h2.popUp {
 
 p {
   font-size: 1em;
-  margin-top: 2em;
-  margin-bottom: 2em;
+  margin-top: 1em;
+  margin-bottom: 0.5;
 }
 
 .projectPopup {
@@ -251,7 +251,7 @@ p {
     gap: 10px;
     flex-direction: row;
     list-style-type: disc;
-    margin-top: 5%;
+    margin-top: 3%;
     margin-bottom: 1%;
     padding-right: 10%;
     flex-wrap: wrap;
