--- a/style.css
+++ b/style.css
@@ -322,7 +322,7 @@ div {
   gap: 8px;
   flex-direction: row;
   list-style-type: disc;
-  margin-top: 5%;
+  margin-top: 3%;
   margin-bottom: 1%;
   flex-wrap: wrap;
 }
